--- a/client/src/styles/reset.scss
+++ b/client/src/styles/reset.scss
@@ -50,3 +50,9 @@ p, h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
+
+// 10. My custom reset, inherit properties for links from parents
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
